syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.glance.spaces.zapp.content.publishing.schemas.sports";

package com.glance.spaces.zapp.content.publishing.schemas.sports;

message PublishRunningPeriod {
  string info = 1;
  int32 period = 2;
}
